// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Show relevant form elements when click on button NO or YES 1`] = `
<form
  className="component"
  onSubmit={[Function]}
>
  <h2>
    Feedback
  </h2>
  <h3>
    Did you find the guidance you needed?
  </h3>
  <button
    className="btn--no show"
    name="btn--no"
    onClick={[Function]}
    type="button"
  >
    No
  </button>
  <button
    className="btn--yes show"
    name="btn--no"
    onClick={[Function]}
    type="button"
  >
    Yes
  </button>
  <fieldset
    className="hide"
  >
    <label
      htmlFor=""
    >
      
    </label>
    <textarea
      id=""
    />
    <input
      className="btn btn--send"
      type="submit"
      value="Send"
    />
    <input
      className="btn btn--cancel"
      type="reset"
      value="Cancel"
    />
  </fieldset>
</form>
`;

exports[`Show relevant form elements when click on button NO or YES 2`] = `
<form
  className="component"
  onSubmit={[Function]}
>
  <h2>
    Feedback
  </h2>
  <h3>
    Did you find the guidance you needed?
  </h3>
  <button
    className="btn--no hide"
    name="btn--no"
    onClick={[Function]}
    type="button"
  >
    No
  </button>
  <button
    className="btn--yes hide"
    name="btn--no"
    onClick={[Function]}
    type="button"
  >
    Yes
  </button>
  <fieldset
    className="show"
  >
    <label
      htmlFor="field-no"
    >
      What did you expect to find?
    </label>
    <textarea
      id="field-no"
    />
    <input
      className="btn btn--send"
      type="submit"
      value="Send"
    />
    <input
      className="btn btn--cancel"
      type="reset"
      value="Cancel"
    />
  </fieldset>
</form>
`;

exports[`Show relevant form elements when click on button NO or YES 3`] = `
<form
  className="component"
  onSubmit={[Function]}
>
  <h2>
    Feedback
  </h2>
  <h3>
    Did you find the guidance you needed?
  </h3>
  <button
    className="btn--no show"
    name="btn--no"
    onClick={[Function]}
    type="button"
  >
    No
  </button>
  <button
    className="btn--yes show"
    name="btn--no"
    onClick={[Function]}
    type="button"
  >
    Yes
  </button>
  <fieldset
    className="hide"
  >
    <label
      htmlFor="field-yes"
    >
      Any comments on your experience?
    </label>
    <textarea
      id="field-yes"
    />
    <input
      className="btn btn--send"
      type="submit"
      value="Send"
    />
    <input
      className="btn btn--cancel"
      type="reset"
      value="Cancel"
    />
  </fieldset>
</form>
`;
